[metadata]
name = pydeepfake
version = 0.0.1
author = Nuwan Abeynayake
author_email = abeynayakenm@gmail.com
url = https://github.com/nuwanuom18
description = This module is to create your 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
packages = find:
python_requires = >= 3.6
include_package_data = True